--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -104,7 +104,7 @@
                                 <li class="list-group-item menuItem" onclick="menuSwitch(1)" role="button"><i class="fas fa-user-graduate black3 mr-2"></i>Alumnos</li>
                                 {% if rol.nombre == 'administrador' %}
                                 <li class="list-group-item menuItem" onclick="menuSwitch(2)" role="button"><i class="fas fa-users black3 mr-2"></i>Usuarios</li>
-                                <li class="list-group-item menuItem" onclick="menuSwitch(3)" role="button"><i class="fas fa-globe-americas black3 mr-2"></i>Ciclos lectivos</li>
+                                <li class="list-group-item menuItem" onclick="menuSwitch(3)" role="button"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</li>
                                 <li class="list-group-item menuItem" onclick="menuSwitch(4)" role="button"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
                                 {% endif %}
                             </ul>
