--- a/flaskps/templates/auth/panel_components/ciclos_lectivos.html
+++ b/flaskps/templates/auth/panel_components/ciclos_lectivos.html
@@ -3,20 +3,21 @@
     <div class="row">
         <div class="col-md-6 mb-3">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header py-1">
                     Ciclos lectivos
                 </div>
                 <div class="card-body">
+                    {% for ciclo in ciclos_lectivos %}
                     <form method="POST">
-                        <h1 class="h5 mb-4">Ciclo lectivo 1 (2019)</h1>
+                        <h1 class="h5 mb-4">Ciclo lectivo {{ciclo.semestre}} (2019)</h1>
                         <div class="form-group row">
                             <div class="col-md-6 mb-2">
                                 <label class="mb-2">Fecha inicio</label>
-                                <input class="form-control" name="fecha_inicio" type="date">
+                                <input class="form-control" type="date" name="fecha_ini" value="{{ciclo.fecha_ini.strftime('%Y-%m-%d')}}">
                             </div>
                             <div class="col-md-6 mb-2">
                                 <label class="mb-2">Fecha cierre</label>
-                                <input class="form-control" name="fecha_inicio" type="date">
+                                <input class="form-control" type="date" name="fecha_fin" value="{{ciclo.fecha_fin.strftime('%Y-%m-%d')}}">
                             </div>
                         </div>
                         <div class="form-group row py-2">
@@ -26,30 +27,13 @@
                         </div>
                     </form>
                     <hr>
-                    <form method="POST">
-                        <h1 class="h5 mb-4">Ciclo lectivo 2 (2019)</h1>
-                        <div class="form-group row">
-                            <div class="col-md-6 mb-2">
-                                <label class="mb-2">Fecha inicio</label>
-                                <input class="form-control" name="fecha_inicio" type="date">
-                            </div>
-                            <div class="col-md-6 mb-2">
-                                <label class="mb-2">Fecha cierre</label>
-                                <input class="form-control" name="fecha_inicio" type="date">
-                            </div>
-                        </div>
-                        <div class="form-group row py-2">
-                            <div class="col-md-12 text-right">
-                                <button class="btn btn-success">Guardar</button>
-                            </div>
-                        </div>
-                    </form>
+                    {% endfor %}
                 </div>
             </div>
         </div>
         <div class="col-md-6 mb-3">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header py-1">
                     Talleres
                 </div>
                 <div class="card-body">
@@ -62,8 +46,9 @@
                                 <label class="mb-2">Semestre</label>
                                 <select class="browser-default custom-select" required>
                                     <option selected disabled>Seleccionar</option>
-                                    <option value="1">Semestre I</option>
-                                    <option value="2">Semestre II</option>
+                                    {% for ciclo in ciclos_lectivos %}
+                                    <option value="{{ciclo.id}}">Semestre {{ciclo.semestre}}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="col-md-6 mb-2">
@@ -93,7 +78,7 @@
     <div class="row">
         <div class="col-md-6 mb-3">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header py-1">
                     Docentes
                 </div>
                 <div class="card-body">
@@ -132,7 +117,7 @@
         </div>
         <div class="col-md-6 mb-3">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header py-1">
                     Estudiantes
                 </div>
                 <div class="card-body">
@@ -166,6 +151,53 @@
                             </div>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.Row -->
+    <h1 class="h4 mt-5">Talleres asignados</h1>
+    <hr class="mb-4">
+    <!-- Row -->
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-header py-0">
+                    
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <!-- Row Estudiantes -->
+                            {% for estudiante in taller_estudiante %}
+                            <tr>
+                                <td>{{row.last_name}}</td>
+                                <td>{{row.first_name}}</td>
+                                <td>{{row.username}}</td>
+                                <td>{{row.email}}</td>
+                                <td>
+                                    <form action="{{ url_for('update_user_status') }}" method="POST">        
+                                        <input type="hidden"  name="id" value="{{row.id}}">                          
+                                        {% if row.activo == 1 %}
+                                        <span class="mr-2">Activo</span>
+                                        <input type="hidden"  name="activo" value="0">
+                                        <button type="submit" class="btn btn-warning btn-sm"><i class="fas fa-retweet mr-2"></i>Desactivar</a>
+                                        {% else %}
+                                        <span class="mr-2">Inactivo</span>
+                                        <input type="hidden"  name="activo" value="1">
+                                        <button type="submit" class="btn btn-warning btn-sm"><i class="fas fa-retweet mr-2"></i>Activar</a>
+                                        {% endif %}
+                                    </form>
+                                </td>
+                                <td class="text-center">
+                                    <!-- Eliminar usuario -->
+                                    <!--a href="/user_delete/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a-->
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
