--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -439,7 +439,7 @@ h1, h2, h3, h4, h5, h6, p {
     Panel de docente
 --------------------------------------------------------------*/
 .panel {
-    background: #fefefe;
+    background: #fcfcfc;
 }
 .nav-link-panel, .nav-link-nombre {
     color: var(--black-4);
